--- a/style.css
+++ b/style.css
@@ -1,6 +1,36 @@
+header {
+    display: block;
+    background-color: #14213d;
+    padding: 20px;
+}
+
+header h1 {
+    color: #e5e5e5;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 40px;
+}
+
+header p {
+    color: #e5e5e5;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+
+}
+
+body {
+    background-color: #c4cee6;
+}
+
+.flex-container {
+    display: flex;
+}
+
 ul {
+    position: absolute;
     list-style: none;
-    margin: 0;
+    margin-left: 80%;
     padding: 0;
     background-color: #14213d
 }
@@ -12,23 +42,86 @@ body form {
   background-color: #14213d;
   display: block;
   text-align: center;
-  margin: 80px auto 0 auto;
-  padding: 15px;
+  margin: 150px;
+  padding: 20px;
   font-size: 20px;
-  width: 20%;
+  width: 90%;
 }
 
-body form a {
+.forms {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+
+input {
+    width: 60%;
+    height: 35px;
+    border-radius: 8px;
+}
+
+input text {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+
+label {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.checkbox {
+    display: inline-flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+ body form a {
     color: #14213d;
-    border-radius: 15px;
+    border-radius: 8px;
     text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-transform: uppercase;
     font-weight: bold;
     background-color: #fca311;
     display: block;
     text-align: center;
-    margin: 30px auto 30px auto;
-    padding: 30px;
-    font-size: 25px;
+    margin: 20px auto 20px auto;
+    padding: 20px;
+    font-size: 20px;
     width: 30%;
+    max-width: 100%;
+}
+
+a:hover {
+    background-color: #f8d294;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: 500px;
+    display: block;
+    border-radius: 8px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 80%;
+}
+
+footer {
+    display: block;
+    background-color: #14213d;
+    padding: 20px;
+}
+
+footer h1 {
+    color: #e5e5e5;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 40px;
+}
+
+footer p {
+    color: #e5e5e5;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
 }
